// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When searching users should filter by community correctly 1`] = `
Array [
  Object {
    "id": 4,
  },
]
`;

exports[`When searching users should return all users when search string is null 1`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
  Object {
    "id": 3,
  },
  Object {
    "id": 4,
  },
  Object {
    "id": 5,
  },
  Object {
    "id": 6,
  },
]
`;

exports[`When searching users should search by first name correctly 1`] = `
Array [
  Object {
    "id": 1,
  },
]
`;

exports[`When searching users should search by last name correctly 1`] = `
Array [
  Object {
    "id": 3,
  },
  Object {
    "id": 5,
  },
]
`;
